fix small problem with scrollbars

--- a/src/App.css
+++ b/src/App.css
@@ -47,5 +47,6 @@ html {
 }
 ::-webkit-scrollbar {
     width: 0px;
+    height: 0px;
     background: transparent; /* make scrollbar transparent */
 }
